finished index, prepared blog. Todo: navbar & margins

--- a/base/blog.html
+++ b/base/blog.html
@@ -10,10 +10,10 @@
 
 		<body data-twttr-rendered="true">
 
-			<div >
+			<div id=root>
 				<div id=header >
 					<div id=title >
-						<strong><h1>LARA JADE</h1></strong>
+						<strong><h1>Lara Jade</h1></strong>
 
 					</div>
 					<div id=navbox >
@@ -23,7 +23,7 @@
 						<img src="images/m4.png">
 					</div>
 				</div>
-				<div   role="main">
+				<div  class=wall class=blog role="main">
 
 					<ul >
 						<li >
