--- a/base/contactus.html
+++ b/base/contactus.html
@@ -10,10 +10,10 @@
 
 		<body data-twttr-rendered="true">
 
-			<div >
+			<div id=root>
 				<div id=header>
 					<div id=title>
-						<h1>LARA JADE</h1>
+						<h1>Lara Jade</h1>
 
 					</div>
 					<div id=navbox >
