--- a/base/index.html
+++ b/base/index.html
@@ -10,10 +10,10 @@
 
 		<body data-twttr-rendered="true">
 
-			<div >
+			<div id=root >
 				<div id=header>
 					<div id=title>
-						<h1>LARA JADE</h1>
+						<h1>Lara Jade</h1>
 
 					</div>
 					<div id=navbox >
@@ -23,9 +23,9 @@
 						<img src="images/m4.png">
 					</div>
 				</div>
-				<div   role="main">
+				<div   role="main" id=index>
 
-					<div class=about>
+					<div >
 						Lara is a freelance web designer with satisfied clients worldwide. Lara has been designing websites professionally for over eight years, and is very keen on personal service. I would describe Lara as a spiritual fast learning generalist with a passion for remarkable design.
 						<br><br>
 						That´s enough of talking about myself in the third person.
