--- a/base/portfolio.html
+++ b/base/portfolio.html
@@ -23,7 +23,7 @@
 						<img src="images/m4.png">
 					</div>
 				</div>
-				<div   role="main" class="portfolio">
+				<div   role="main" class=portfolio>
 
 					<ul >
 												<li >
