Everything edited except Contact Us
Problems:
- blog and portfolio items in the "scrollbox" are not centered
- blog footer is messed up

--- a/base/blog.html
+++ b/base/blog.html
@@ -23,7 +23,7 @@
 						<img src="images/m4.png">
 					</div>
 				</div>
-				<div  class=wall class=blog role="main">
+				<div class=blog role="main">
 
 					<ul >
 						<li >
@@ -70,7 +70,7 @@
 							</div>
 						</li>
 
-					</ul>
+                        </ul>
 
 				</div>
 
