Fixed shared icons

--- a/base/blog.html
+++ b/base/blog.html
@@ -76,7 +76,7 @@
 
 				<div id=footer >
 					<!-- <div > -->
-					<div  >
+					<div id=address  >
 						<strong>ADDRESS</strong>
 						<br>
 						<br>
@@ -93,8 +93,8 @@
 						<br>
 						<br>
 						<img  src="images/qcode.png" >
-					</div>
-					<div  >
+					</div >
+					<div id="about"  >
 						<strong>About Me</strong>
 						<br>
 						<br>
@@ -110,13 +110,13 @@
 						<img src="images/facebook.png" >
 						<img src="images/google_plus.png" >
 					</div>
-					<div  >
+					<div id="last_post" >
 						<strong>My last post</strong>
 						<br>
 						<br>
 						Over the previous year, the Polymer team has spent a lot of time teaching developers how to create their own elements. This has lead to a rapidly growing ecosystem, buoyed in large... <strong>More</strong>
 					</div>
-					<div >
+					<div id="last_project" >
 						<strong>Last Project</strong>
 						<br>
 						</br>
