--- a/base/portfolio.html
+++ b/base/portfolio.html
@@ -17,10 +17,10 @@
 
 					</div  >
 					<div id=navbox >
-						<img src="images/m1.png" >
-						<img src="images/m2.png">
-						<img src="images/m3.png">
-						<img src="images/m4.png">
+						<a href="index.html"><img src="images/m1.png"></a>
+                        <a href="blog.html"><img src="images/m2.png"></a>
+                        <a href="portfolio.html"><img src="images/m3.png"></a>
+                        <a href="contactus.html"><img src="images/m4.png"></a>
 					</div>
 				</div>
 				<div   role="main" class=portfolio>
