--- a/base/blog.html
+++ b/base/blog.html
@@ -104,11 +104,11 @@
 						<strong>Follow me:</strong>
 						<br>
 						<br>
-						<img src="images/twitter.png" >
-						<img src="images/linkedin.png" >
-						<img src="images/pinterest.png" >
-						<img src="images/facebook.png" >
-						<img src="images/google_plus.png" >
+						<a href="http://twitter.com/larajade_"><img src="images/twitter.png" ></a>
+						<a href="http://www.linkedin.com/in/larajade"><img src="images/linkedin.png" ></a>
+						<a href="http://www.pinterest.com/creativelive/lara-jade/"><img src="images/pinterest.png" ></a>
+						<a href="http://facebook.com/larajadephotography"><img src="images/facebook.png" ></a>
+						<a href="http://plus.google.com/wm/4/explore/larajade"><img src="images/google_plus.png" ></a>
 					</div>
 					<div id="last_post" >
 						<strong>My last post</strong>
