--- a/base/contactus.html
+++ b/base/contactus.html
@@ -58,7 +58,7 @@
 
 					<div class=contact_info >
 						<div >
-							<strong >Email</strong><strong >larajade@larajade.co.uk</strong>
+                            <strong >Email </strong><a href="mailto:larajade@larajade.co.uk"><strong >larajade@larajade.co.uk</strong></a>
 							<br>
 							<strong >Fax</strong><strong > +44 (0) 1234 567891</strong>
 							<br>
@@ -100,11 +100,11 @@
 						<strong>Follow me:</strong>
 						<br>
 						<br>
-						<img src="images/twitter.png" >
-						<img src="images/linkedin.png" >
-						<img src="images/pinterest.png" >
-						<img src="images/facebook.png" >
-						<img src="images/google_plus.png" >
+						<a href="http://twitter.com/larajade_"><img src="images/twitter.png" ></a>
+						<a href="http://www.linkedin.com/in/larajade"><img src="images/linkedin.png" ></a>
+						<a href="http://www.pinterest.com/creativelive/lara-jade/"><img src="images/pinterest.png" ></a>
+						<a href="http://facebook.com/larajadephotography"><img src="images/facebook.png" ></a>
+						<a href="http://plus.google.com/wm/4/explore/larajade"><img src="images/google_plus.png" ></a>
 					</div>
 					<div id=last_post >
 						<strong>My last post</strong>
