--- a/base/index.html
+++ b/base/index.html
@@ -61,7 +61,7 @@
 						<strong>About Me</strong>
 						<br>
 						<br>
-						Lara is a freelance web designer with satisfied clients worldwide. Lara has been designing websites professionally for over eight years, and... <strong>More</strong>
+						Lara is a freelance web designer with satisfied clients worldwide. Lara has been designing websites professionally for over eight years, and...... <strong>More</strong>
 						<br>
 						<br>
 						<strong>Follow me:</strong>
