Prepared CSS for responsive design

--- a/base/index.html
+++ b/base/index.html
@@ -18,9 +18,9 @@
 					</div>
 					<div id=navbox >
                         <a href="index.html"><img src="images/m1.png"></a>
-                        <a href="blog.html"><img src="images/m2.png"></a>
+                            <a href="blog.html"><img src="images/m2.png"></a>
                         <a href="portfolio.html"><img src="images/m3.png"></a>
-                        <a href="contactus.html"><img src="images/m4.png"></a>
+                            <a href="contactus.html"><img src="images/m4.png"></a><
 					</div>
 				</div>
 				<div   role="main" id=index>
