--- a/base/contactus.html
+++ b/base/contactus.html
@@ -17,10 +17,10 @@
 
 					</div>
 					<div id=navbox >
-						<a href="index.html"><img src="images/m1.png"></a>
-                        <a href="blog.html"><img src="images/m2.png"></a>
-                        <a href="portfolio.html"><img src="images/m3.png"></a>
-                        <a href="contactus.html"><img src="images/m4.png"></a>
+						<div id=navbox1><a href="index.html"><img src="images/m1.png"></a>
+                            <a href="blog.html"><img src="images/m2.png"></a></div>
+                        <div id=navbox2><a href="portfolio.html"><img src="images/m3.png"></a>
+                            <a href="contactus.html"><img src="images/m4.png"></a></div>
 					</div>
 				</div>
 				<div   role="main" id=contactform>
