--- a/base/contactus.html
+++ b/base/contactus.html
@@ -36,11 +36,11 @@
 					<div class=form >
 						<form>
 							<p>
-                                First name: <input type="text" name="firstname" class=input_right></p>
+                                First name: <input type="text" name="firstname" class=input_right placeholder="First Name"></p>
                             
                             <p>
-                                Last name: <input type="text" name="lastname" class=input_right></p>
-                    		<textarea type="text" name="message" rows="7" cols="65" ></textarea>
+                                Last name: <input type="text" name="lastname" class=input_right placeholder="Last Name"></p>
+                    		<textarea type="text" name="message" rows="7" cols="65" placeholer="Message"></textarea>
 							<br>
 							<button type="button" >
 								Submit
