--- a/base/index.html
+++ b/base/index.html
@@ -11,20 +11,18 @@
 		<body data-twttr-rendered="true">
 
 			<div id=root >
-				<div id=header>
+				<header>
 					<div id=title>
 						<h1>Lara Jade</h1>
 
 					</div>
-					<div id=navbox >
-                        <div id=navbox1><a href="index.html"><img src="images/m1.png"></a>
-                            <a href="blog.html"><img src="images/m2.png"></a></div><div id=navbox2><a href="portfolio.html"><img src="images/m3.png"></a>
-                            <a href="contactus.html"><img src="images/m4.png"></a></div>
-					</div>
-				</div>
-				<div   role="main" id=index>
+					<nav>
+                        <a href="index.html"><img src="images/m1.png"></a><a href="blog.html"><img src="images/m2.png"></a><a href="portfolio.html"><img src="images/m3.png"></a><a href="contactus.html"><img src="images/m4.png"></a>
+					</nav>
+				</header>
+				<section>
 
-					<div >
+					<article>
 						Lara is a freelance web designer with satisfied clients worldwide. Lara has been designing websites professionally for over eight years, and is very keen on personal service. I would describe Lara as a spiritual fast learning generalist with a passion for remarkable design.
 						<br><br>
 						That´s enough of talking about myself in the third person.
@@ -33,12 +31,12 @@
 						<br><br>
 						I have sucessfully been a freelance web designer now for a while and it has given me even more love for this work. I have worked with ad agencies, web developers, diaper makers, pension funds, furniture makers, businiess women & men, friends & family.
 
-					</div>
-				</div>
+					</article>
+				</section>
 
-				<div id=footer >
+				<footer >
 					<!-- <div > -->
-					<div id=address>
+					<article id=address>
 						<strong>ADDRESS</strong>
 						<br>
 						<br>
@@ -55,8 +53,8 @@
 						<br>
 						<br>
 						<img  src="images/qcode.png" >
-					</div>
-					<div  id=about>
+					</article>
+					<article id=about>
 						<strong>About Me</strong>
 						<br>
 						<br>
@@ -71,14 +69,14 @@
 						<a href="http://www.pinterest.com/creativelive/lara-jade/"><img src="images/pinterest.png" ></a>
 						<a href="http://facebook.com/larajadephotography"><img src="images/facebook.png" ></a>
 						<a href="http://plus.google.com/wm/4/116123554028678966465/posts"><img src="images/google_plus.png" ></a>
-					</div>
-					<div  id=last_post>
+					</article>
+					<article>
 						<strong>My last post</strong>
 						<br>
 						<br>
 						Over the previous year, the Polymer team has spent a lot of time teaching developers how to create their own elements. This has lead to a rapidly growing ecosystem, buoyed in large... <strong>More</strong>
-					</div>
-					<div id=last_project>
+					</article>
+					<article>
 						<strong>Last Project</strong>
 						<br>
 						</br>
@@ -86,10 +84,9 @@
 						<br>
 						<br>
 						<img id=last_project_thumbnail src="images/portfolio/p1.jpg" >
-					</div>
+					</article>
 
-					<!-- </div> -->
-				</div>
+				</footer>
 			</div>
 
 		</body>
