Flexbox for central part of page
Still unfinished, just putting it up there

--- a/base/blog.html
+++ b/base/blog.html
@@ -11,23 +11,18 @@
 		<body data-twttr-rendered="true">
 
 			<div id=root>
-				<div id=header >
+				<header>
 					<div id=title >
 						<strong><h1>Lara Jade</h1></strong>
 
 					</div>
-					<div id=navbox >
-						<div id=navbox1><a href="index.html"><img src="images/m1.png"></a>
-                            <a href="blog.html"><img src="images/m2.png"></a></div>
-                        <div id=navbox2><a href="portfolio.html"><img src="images/m3.png"></a>
-                            <a href="contactus.html"><img src="images/m4.png"></a></div>
-					</div>
-				</div>
-				<div class=blog role="main">
+					<nav>
+						<div><a href="index.html"><img src="images/m1.png"></a><a href="blog.html"><img src="images/m2.png"></a></div><div><a href="portfolio.html"><img src="images/m3.png"></a><a href="contactus.html"><img src="images/m4.png"></a></div>
+					</nav>
+				</header>
+				<section id=blog>
 
-					<ul >
-						<li >
-							<div>
+						<article >
 								<div>
 									<img src="./images/blog/b1.jpg" alt="">
 									<strong>Let’s build some apps with Polymer!</strong>.
@@ -35,10 +30,8 @@
 					
 
 								</div>
-							</div>
-						</li>
-						<li >
-							<div>
+						</article>
+						<article >
 								<div>
 									<img src="./images/blog/b2.png" alt="">
 									<strong>Web Animations Playback Control in Chrome 39</strong>.
@@ -46,20 +39,16 @@
 
 									Earlier this year, Chrome 36 landed the element.animate method as a part of the broader Web Animations spec. This allows for efficient, native animations written imperatively - giving developers the choice to build their animations and transitions with the most suitable.
 								</div>
-							</div>
-						</li>
-						<li >
-							<div>
+						</articlei>
+						<article >
 								<div><img src="./images/blog/b3.jpg" alt="">
 									<strong>Fundamentals of Mobile Web Development</strong>.
 									
 
 									At Chrome Dev Summit 2014 there was a whole host of topics and brand spanking new API’s covered, but its not all about the new and shiny. If you are a new Web Developer or even an experienced developer about to embark on exploring new APIs, chances are you’ll follow these three steps: learn, build and iterate. 
 								</div>
-							</div>
-						</li>
-						<li >
-							<div>
+						</article>
+						<article >
 								<div>
 									<img src="./images/blog/b4.png" alt="">
 									<strong>image-rendering: pixelated</strong>.
@@ -67,16 +56,14 @@
 
 									As web developers we play with images all the time and in most cases browsers are great at scaling images to fit the boundaries of our site designs whilst keeping the images pretty. But what happens when you want to control how the browser scales the images on your page?
 								</div>
-							</div>
-						</li>
+						</article>
 
-                        </ul>
 
-				</div>
+				</section>
 
-				<div id=footer >
+				<footer>
 					<!-- <div > -->
-					<div id=address  >
+					<article id=address  >
 						<strong>ADDRESS</strong>
 						<br>
 						<br>
@@ -93,8 +80,8 @@
 						<br>
 						<br>
 						<img  src="images/qcode.png" >
-					</div >
-					<div id="about"  >
+					</article >
+					<article id="about"  >
 						<strong>About Me</strong>
 						<br>
 						<br>
@@ -109,14 +96,14 @@
 						<a href="http://www.pinterest.com/creativelive/lara-jade/"><img src="images/pinterest.png" ></a>
 						<a href="http://facebook.com/larajadephotography"><img src="images/facebook.png" ></a>
 						<a href="http://plus.google.com/wm/4/116123554028678966465/posts"><img src="images/google_plus.png" ></a>
-					</div>
-					<div id="last_post" >
+					</article>
+					<article>
 						<strong>My last post</strong>
 						<br>
 						<br>
 						Over the previous year, the Polymer team has spent a lot of time teaching developers how to create their own elements. This has lead to a rapidly growing ecosystem, buoyed in large... <strong>More</strong>
-					</div>
-					<div id="last_project" >
+					</article>
+					<article>
 						<strong>Last Project</strong>
 						<br>
 						</br>
@@ -124,10 +111,10 @@
 						<br>
 						<br>
 						<img id=last_project_thumbnail src="images/portfolio/p1.jpg" >
-					</div>
+					</article>
 
 					<!-- </div> -->
-				</div>
+				</footer>
 </div>
 
 		</body>
