--- a/base/contactus.html
+++ b/base/contactus.html
@@ -11,18 +11,15 @@
 		<body data-twttr-rendered="true">
 
 			<div id=root>
-				<div id=header>
+				<header>
 					<div id=title>
 						<h1>Lara Jade</h1>
 
 					</div>
-					<div id=navbox >
-						<div id=navbox1><a href="index.html"><img src="images/m1.png"></a>
-                            <a href="blog.html"><img src="images/m2.png"></a></div>
-                        <div id=navbox2><a href="portfolio.html"><img src="images/m3.png"></a>
-                            <a href="contactus.html"><img src="images/m4.png"></a></div>
-					</div>
-				</div>
+					<nav>
+						<div><a href="index.html"><img src="images/m1.png"></a><a href="blog.html"><img src="images/m2.png"></a></div><div><a href="portfolio.html"><img src="images/m3.png"></a><a href="contactus.html"><img src="images/m4.png"></a></div>
+					</nav>
+				</header>
 				<div   role="main" id=contactform>
 				
 					<div id=title2>
@@ -64,9 +61,9 @@
 				</div>
 
 
-				<div id=footer >
+				<footer>
 					<!-- <div > -->
-					<div id=address >
+					<article id=address >
 						<strong>ADDRESS</strong>
 						<br>
 						<br>
@@ -83,8 +80,8 @@
 						<br>
 						<br>
 						<img  src="images/qcode.png" >
-					</div>
-					<div id=about >
+					</article>
+					<article id=about >
 						<strong>About Me</strong>
 						<br>
 						<br>
@@ -99,14 +96,14 @@
 						<a href="http://www.pinterest.com/creativelive/lara-jade/"><img src="images/pinterest.png" ></a>
 						<a href="http://facebook.com/larajadephotography"><img src="images/facebook.png" ></a>
 						<a href="http://plus.google.com/wm/4/116123554028678966465/posts"><img src="images/google_plus.png" ></a>
-					</div>
-					<div id=last_post >
+					</article>
+					<article>
 						<strong>My last post</strong>
 						<br>
 						<br>
 						Over the previous year, the Polymer team has spent a lot of time teaching developers how to create their own elements. This has lead to a rapidly growing ecosystem, buoyed in large... <strong>More</strong>
-					</div>
-					<div id=last_project>
+					</article>
+					<article>
 						<strong>Last Project</strong>
 						<br>
 						</br>
@@ -114,10 +111,10 @@
 						<br>
 						<br>
 						<img id=last_project_thumbnail src="images/portfolio/p1.jpg" >
-					</div>
+					</article>
 
 					<!-- </div> -->
-				</div>
+				</footer>
 			</div>
 
 		</body>
