--- a/base/index.html
+++ b/base/index.html
@@ -17,7 +17,7 @@
 
 					</div>
 					<nav>
-                        <a href="index.html"><img src="images/m1.png"></a><a href="blog.html"><img src="images/m2.png"></a><a href="portfolio.html"><img src="images/m3.png"></a><a href="contactus.html"><img src="images/m4.png"></a>
+                        <div><a href="index.html"><img src="images/m1.png"></a><a href="blog.html"><img src="images/m2.png"></a></div><div><a href="portfolio.html"><img src="images/m3.png"></a><a href="contactus.html"><img src="images/m4.png"></a></div>
 					</nav>
 				</header>
 				<section>
