--- a/base/portfolio.html
+++ b/base/portfolio.html
@@ -11,22 +11,18 @@
 		<body data-twttr-rendered="true">
 
 			<div id=root >
-				<div id=header >
+				<header>
 					<div id=title >
 						<h1>Lara Jade</h1>
 
 					</div  >
-					<div id=navbox >
-						<div id=navbox1><a href="index.html"><img src="images/m1.png"></a>
-                            <a href="blog.html"><img src="images/m2.png"></a></div>
-                        <div id=navbox2><a href="portfolio.html"><img src="images/m3.png"></a>
-                            <a href="contactus.html"><img src="images/m4.png"></a></div>
-					</div>
-				</div>
-				<div   role="main" class=portfolio>
+					<nav>
+						<div><a href="index.html"><img src="images/m1.png"></a><a href="blog.html"><img src="images/m2.png"></a></div><div><a href="portfolio.html"><img src="images/m3.png"></a><a href="contactus.html"><img src="images/m4.png"></a></div>
+					</nav>
+				</header>
+				<section id=portfolio>
 
-					<ul >
-												<li >
+												<article >
 							<div><img src="./images/portfolio/p1.jpg" alt="">
 								<div>
 									<strong>Freelance WebSite</strong>
@@ -34,8 +30,8 @@
 									 2015
 								</div>
 							</div>
-						</li>
-						<li >
+						</article>
+						<article >
 							<div><img src="./images/portfolio/p2.jpg" alt="">
 								<div>
 									<strong>MyHotel WebSite</strong>
@@ -43,8 +39,8 @@
 									2014
 								</div>
 							</div>
-						</li>
-						<li >
+						</article>
+						<article>
 							<div><img src="./images/portfolio/p3.jpg" alt="">
 								<div>
 									<strong>Intersac</strong>
@@ -52,8 +48,8 @@
 									 2013
 								</div>
 							</div>
-						</li>
-						<li >
+						</article>
+						<article>
 							<div><img src="./images/portfolio/p4.jpg" alt="">
 								<div>
 									<strong>Voll</strong>
@@ -61,8 +57,8 @@
 									 2015
 								</div>
 							</div>
-						</li>
-						<li >
+						</article>
+						<article>
 							<div><img src="./images/portfolio/p5.png" alt="">
 								<div>
 									<strong>Acrostia</strong>
@@ -70,8 +66,8 @@
 								   2011
 								</div>
 							</div>
-						</li>
-						<li >
+						</article>
+						<article>
 							<div><img src="./images/portfolio/p6.jpg" alt="">
 								<div>
 									<strong>Freesbie</strong>
@@ -79,18 +75,18 @@
 									 2010
 								</div>
 							</div>
-						</li>
+						</article>
 
-						<li >
+						<article>
 							<div><img src="./images/portfolio/p7.jpg" alt="">
 								<div>
 									<strong>Gallery WebSites</strong><br>
 									 2009
 								</div>
 							</div>
-						</li>
+						</article>
 
-						<li >
+						<article>
 							<div><img src="./images/portfolio/p8.png" alt="">
 								<div>
 									<strong>Old Personal Web Site</strong>
@@ -98,14 +94,14 @@
 									 2008
 								</div>
 							</div>
-						</li>
-					</ul>
+						</article>
 
-				</div>
 
-				<div id=footer >
+				</section>
+
+				<footer>
 					<!-- <div > -->
-					<div id=address >
+					<article id=address >
 						<strong>ADDRESS</strong>
 						<br>
 						<br>
@@ -122,8 +118,8 @@
 						<br>
 						<br>
 						<img  src="images/qcode.png" >
-					</div>
-					<div id=about >
+					</article>
+					<article id=about >
 						<strong>About Me</strong>
 						<br>
 						<br>
@@ -138,14 +134,14 @@
 						<a href="http://www.pinterest.com/creativelive/lara-jade/"><img src="images/pinterest.png" ></a>
 						<a href="http://facebook.com/larajadephotography"><img src="images/facebook.png" ></a>
 						<a href="http://plus.google.com/wm/4/116123554028678966465/posts"><img src="images/google_plus.png" ></a>
-					</div>
-					<div id=last_post >
+					</article>
+					<article>
 						<strong>My last post</strong>
 						<br>
 						<br>
 						Over the previous year, the Polymer team has spent a lot of time teaching developers how to create their own elements. This has lead to a rapidly growing ecosystem, buoyed in large... <strong>More</strong>
-					</div>
-					<div id=last_project >
+					</article>
+					<article>
 						<strong>Last Project</strong>
 						<br>
 						</br>
@@ -153,10 +149,10 @@
 						<br>
 						<br>
 						<img id=last_project_thumbnail src="images/portfolio/p1.jpg" >
-					</div>
+					</article>
 
 					<!-- </div> -->
-				</div>
+				</footer>
 </div>
 
 		</body>
