--- a/base/blog.html
+++ b/base/blog.html
@@ -39,7 +39,7 @@
 
 									Earlier this year, Chrome 36 landed the element.animate method as a part of the broader Web Animations spec. This allows for efficient, native animations written imperatively - giving developers the choice to build their animations and transitions with the most suitable.
 								</div>
-						</articlei>
+						</article>
 						<article >
 								<div><img src="./images/blog/b3.jpg" alt="">
 									<strong>Fundamentals of Mobile Web Development</strong>.
