--- a/base/index.html
+++ b/base/index.html
@@ -20,7 +20,7 @@
                         <div><a href="index.html"><img src="images/m1.png"></a><a href="blog.html"><img src="images/m2.png"></a></div><div><a href="portfolio.html"><img src="images/m3.png"></a><a href="contactus.html"><img src="images/m4.png"></a></div>
 					</nav>
 				</header>
-				<section>
+				<section id=index>
 
 					<article>
 						Lara is a freelance web designer with satisfied clients worldwide. Lara has been designing websites professionally for over eight years, and is very keen on personal service. I would describe Lara as a spiritual fast learning generalist with a passion for remarkable design.
