--- a/base/blog.html
+++ b/base/blog.html
@@ -7,9 +7,14 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 		<link rel="stylesheet" href="main.css">
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script src="script.js"></script>
+    </head>
 
 		<body data-twttr-rendered="true">
-
+        <div id=menu>
+                    <img id=more src="images/more2.png"><div class=top><a   href="index.html"><img src="images/m1.png"></a><a href="blog.html"><img src="images/m2.png"></a></div><div class=bottom><a href="portfolio.html"><img src="images/m3.png"></a><a href="contactus.html"><img src="images/m4.png"></a>            </div>
+            </div>
 			<div id=root>
 				<header>
 					<div id=title >
