--- a/base/blog.html
+++ b/base/blog.html
@@ -12,7 +12,7 @@
     </head>
 
 		<body data-twttr-rendered="true">
-        <div id=menu>
+        <div id=menu class=fade>
                     <img id=more src="images/more2.png"><div class=top><a   href="index.html"><img src="images/m1.png"></a><a href="blog.html"><img src="images/m2.png"></a></div><div class=bottom><a href="portfolio.html"><img src="images/m3.png"></a><a href="contactus.html"><img src="images/m4.png"></a>            </div>
             </div>
 			<div id=root>
