--- a/base/blog.html
+++ b/base/blog.html
@@ -13,7 +13,7 @@
 
 		<body data-twttr-rendered="true">
         <div id=menu>
-                    <img id=more src="images/Materials2.2/menu2.png"><div class=top><a   href="index.html"><img src="images/Materials2.2/mm1.png"></a><a href="blog.html"><img src="images/Materials2.2/mm2.png"></a></div><div class=bottom><a href="portfolio.html"><img src="images/Materials2.2/mm3.png"></a><a href="contactus.html"><img src="images/Materials2.2/mm4.png"></a>            </div>
+                    <img id=more src="images/Materials2.2/menu2.png"><div id=sticky><img src="images/Materials2.2/sticky_icon_off.png"></div><div class=top><a   href="index.html"><img src="images/Materials2.2/mm1.png"></a><a href="blog.html"><img src="images/Materials2.2/mm2.png"></a></div><div class=bottom><a href="portfolio.html"><img src="images/Materials2.2/mm3.png"></a><a href="contactus.html"><img src="images/Materials2.2/mm4.png"></a>            </div>
             </div>
 			<div id=root>
 				<header>
