added auto-resizing, fixed pin

--- a/base/index.html
+++ b/base/index.html
@@ -10,89 +10,89 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script src="script.js"></script>
     </head>
-		<body data-twttr-rendered="true">
-            
-            <div id=menu class=fade>
-                <img id=more src="images/Materials2.2/menu2.png"><div id=sticky ><img src="images/Materials2.2/sticky_icon_off.png"></div><div class=top><a   href="index.html"><img src="images/Materials2.2/mm1.png"></a><a href="blog.html"><img src="images/Materials2.2/mm2.png"></a></div><div class=bottom><a href="portfolio.html"><img src="images/Materials2.2/mm3.png"></a><a href="contactus.html"><img src="images/Materials2.2/mm4.png"></a>            </div>
-            </div>
+    <body data-twttr-rendered="true" onresize="onResize()">
 
-			<div id=root >
-				<header>
-					<div id=title>
-						<h1>Lara Jade</h1>
+        <div id=menu class=fade>
+            <img id=more src="images/Materials2.2/menu2.png"><div id=sticky ></div><div class=top><a   href="index.html"><img src="images/Materials2.2/mm1.png"></a><a href="blog.html"><img src="images/Materials2.2/mm2.png"></a></div><div class=bottom><a href="portfolio.html"><img src="images/Materials2.2/mm3.png"></a><a href="contactus.html"><img src="images/Materials2.2/mm4.png"></a>            </div>
+        </div>
 
-					</div>
-					<nav>
-                        <div><a href="index.html"><img src="images/m1.png"></a><a href="blog.html"><img src="images/m2.png"></a></div><div><a href="portfolio.html"><img src="images/m3.png"></a><a href="contactus.html"><img src="images/m4.png"></a></div>
-					</nav>
-				</header>
-				<section id=index>
+        <div id=root >
+            <header>
+                <div id=title>
+                    <h1>Lara Jade</h1>
 
-					<article>
-						Lara is a freelance web designer with satisfied clients worldwide. Lara has been designing websites professionally for over eight years, and is very keen on personal service. I would describe Lara as a spiritual fast learning generalist with a passion for remarkable design.
-						<br><br>
-						That´s enough of talking about myself in the third person.
-						<br><br>
-						At first I intended to be an animator and went to design school fully motivated to become just that. One thing led to another and 2 years went by and I was a (almost) fully fledged freelance web designer without ever planning to become one.
-						<br><br>
-						I have sucessfully been a freelance web designer now for a while and it has given me even more love for this work. I have worked with ad agencies, web developers, diaper makers, pension funds, furniture makers, businiess women & men, friends & family.
+                </div>
+                <nav>
+                    <div><a href="index.html"><img src="images/m1.png"></a><a href="blog.html"><img src="images/m2.png"></a></div><div><a href="portfolio.html"><img src="images/m3.png"></a><a href="contactus.html"><img src="images/m4.png"></a></div>
+                </nav>
+            </header>
+            <section id=index>
 
-					</article>
-				</section>
+                <article>
+                    Lara is a freelance web designer with satisfied clients worldwide. Lara has been designing websites professionally for over eight years, and is very keen on personal service. I would describe Lara as a spiritual fast learning generalist with a passion for remarkable design.
+                    <br><br>
+                    That´s enough of talking about myself in the third person.
+                    <br><br>
+                    At first I intended to be an animator and went to design school fully motivated to become just that. One thing led to another and 2 years went by and I was a (almost) fully fledged freelance web designer without ever planning to become one.
+                    <br><br>
+                    I have sucessfully been a freelance web designer now for a while and it has given me even more love for this work. I have worked with ad agencies, web developers, diaper makers, pension funds, furniture makers, businiess women & men, friends & family.
 
-				<footer >
-					<!-- <div > -->
-					<article id=address>
-						<strong>ADDRESS</strong>
-						<br>
-						<br>
-						New Chrichton Cottage
-						<br>
-						Arradoul, Buckie
-						<br>
-						AB43 5AP
-						<br>
-						Scotland UK
-						<br>
-						<br>
-						+44 (0) 1234 567891
-						<br>
-						<br>
-						<img  src="images/qcode.png" >
-					</article>
-					<article id=about>
-						<strong>About Me</strong>
-						<br>
-						<br>
-						Lara is a freelance web designer with satisfied clients worldwide. Lara has been designing websites professionally for over eight years, and...... <strong>More</strong>
-						<br>
-						<br>
-						<strong>Follow me:</strong>
-						<br>
-						<br>
-						<a href="http://twitter.com/larajade_"><img src="images/twitter.png" ></a>
-						<a href="http://www.linkedin.com/in/larajade"><img src="images/linkedin.png" ></a>
-						<a href="http://www.pinterest.com/creativelive/lara-jade/"><img src="images/pinterest.png" ></a>
-						<a href="http://facebook.com/larajadephotography"><img src="images/facebook.png" ></a>
-						<a href="http://plus.google.com/wm/4/116123554028678966465/posts"><img src="images/google_plus.png" ></a>
-					</article>
-					<article>
-						<strong>My last post</strong>
-						<br>
-						<br>
-						Over the previous year, the Polymer team has spent a lot of time teaching developers how to create their own elements. This has lead to a rapidly growing ecosystem, buoyed in large... <strong>More</strong>
-					</article>
-					<article>
-						<strong>Last Project</strong>
-						<br>
-						</br>
-						Freelance WebSite 
-						<br>
-						<br>
-						<img id=last_project_thumbnail src="images/portfolio/p1.jpg" >
-					</article>
+                </article>
+            </section>
 
-				</footer>
-			</div>
-		</body>
+            <footer >
+                <!-- <div > -->
+                <article id=address>
+                    <strong>ADDRESS</strong>
+                    <br>
+                    <br>
+                    New Chrichton Cottage
+                    <br>
+                    Arradoul, Buckie
+                    <br>
+                    AB43 5AP
+                    <br>
+                    Scotland UK
+                    <br>
+                    <br>
+                    +44 (0) 1234 567891
+                    <br>
+                    <br>
+                    <img  src="images/qcode.png" >
+                </article>
+                <article id=about>
+                    <strong>About Me</strong>
+                    <br>
+                    <br>
+                    Lara is a freelance web designer with satisfied clients worldwide. Lara has been designing websites professionally for over eight years, and...... <strong>More</strong>
+                    <br>
+                    <br>
+                    <strong>Follow me:</strong>
+                    <br>
+                    <br>
+                    <a href="http://twitter.com/larajade_"><img src="images/twitter.png" ></a>
+                    <a href="http://www.linkedin.com/in/larajade"><img src="images/linkedin.png" ></a>
+                    <a href="http://www.pinterest.com/creativelive/lara-jade/"><img src="images/pinterest.png" ></a>
+                    <a href="http://facebook.com/larajadephotography"><img src="images/facebook.png" ></a>
+                    <a href="http://plus.google.com/wm/4/116123554028678966465/posts"><img src="images/google_plus.png" ></a>
+                </article>
+                <article>
+                    <strong>My last post</strong>
+                    <br>
+                    <br>
+                    Over the previous year, the Polymer team has spent a lot of time teaching developers how to create their own elements. This has lead to a rapidly growing ecosystem, buoyed in large... <strong>More</strong>
+                </article>
+                <article>
+                    <strong>Last Project</strong>
+                    <br>
+                    </br>
+                    Freelance WebSite 
+                    <br>
+                    <br>
+                    <img id=last_project_thumbnail src="images/portfolio/p1.jpg" >
+                </article>
+
+            </footer>
+        </div>
+    </body>
 </html>
