--- a/base/portfolio.html
+++ b/base/portfolio.html
@@ -11,9 +11,9 @@
         <script src="script.js"></script>
     </head>
 
-		<body data-twttr-rendered="true">
+		<body data-twttr-rendered="true" onresize="onResize()">
 
-            <div id=menu>
+            <div id=menu class=fade>
                     <img id=more src="images/Materials2.2/menu2.png"><div id=sticky><img src="images/Materials2.2/sticky_icon_off.png"></div><div class=top><a   href="index.html"><img src="images/Materials2.2/mm1.png"></a><a href="blog.html"><img src="images/Materials2.2/mm2.png"></a></div><div class=bottom><a href="portfolio.html"><img src="images/Materials2.2/mm3.png"></a><a href="contactus.html"><img src="images/Materials2.2/mm4.png"></a>            </div>
 
             </div>
